# xrce-link-lab

./: .gitignore  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  empty.overlay  prj.conf  relax.conf  west.yml
app/src/: main.c
firmware/nrf52_base_app/: CMakeLists.txt  prj.conf
firmware/nrf52_base_app/boards/: nrf52840dk_nrf52840.overlay
firmware/nrf52_base_app/src/: main.c
firmware/xrce_nrf52_client/: CMakeLists.txt  prj.conf
firmware/xrce_nrf52_client/boards/: nrf52840dk_nrf52840.overlay
firmware/xrce_nrf52_client/src/: main.c  transport_stub.c  transport_stub.h  transport_zephyr_serial.c  transport_zephyr_serial.h
firmware/xrce_nrf52_uxrapp/: CMakeLists.txt  prj.conf
firmware/xrce_nrf52_uxrapp/src/: main.c  transport_zephyr_serial.c  transport_zephyr_serial.h
firmware/xrce_nrf52_uxrapp/wip/: transport_zephyr_serial.c  transport_zephyr_serial.h
modules/libmicroros/: host-udp.conf
phase2_ros2_ws/src/xrce_link_demo/: package.xml  setup.cfg  setup.py
phase2_ros2_ws/src/xrce_link_demo/launch/: demo.launch.py
phase2_ros2_ws/src/xrce_link_demo/xrce_link_demo/: jitter_node.py  processor_node.py  relay_node.py
renode/: multinode_ble.resc  multinode_quark.resc  nrf52.repl  nrf52_agent_serial.resc  nrf52_load.resc  nrf52_uart_capture.resc  serial_pty_nrf.resc  two_nodes_nrf.resc  versatile_agent_serial.resc
tests/: multinode.robot  nrf52_load.robot  nrf52_uart_capture.robot  renode_xrce_serial_e2e.robot  serial_pty.robot  smoke.robot  two_nodes.robot
tools/: netem_profiles.sh  pty_e2e_local.sh
tools/metrics/: collect_helloworld.py
